# UQ-Lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/api/: components.py  database.py  main.py  settings.py
app/static/: client.js  database.json
app/static/resources/: users.json
app/static/resources/campaigns/: example copy.csv
app/static/styles/: base.css
app/templates/: base.html
app/templates/campaign/: data.html  parameters.html  params.html
app/templates/campaign/parameters/: input.html  output.html
app/templates/components/: campaign_list.html  create_campaign.html  data.html  navbar.html  upload.html
app/templates/components/parameters/: input.html  output.html
app/templates/pages/: campaign.html  homepage.html  index.html  login.html  new_campaign.html  overview.html
docs/: build.sh  index.html
docs/source/: conf.py  index.rst
lib/uq_lab/: __init__.py
tests/integration/: test_installation.py
