[tool.poetry]
name = "uq_lab"
packages = [
    { include = "uq_lab", from = "lib" },
]
version = "0.1.0"
description = "Uncertainty Quantification playground and laboratory"
authors = ["Freddy Wordingham", "Mikkel Lykkegaard", "Tim Dodwell"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
