[tool.poetry]
name = "uq_lab"
packages = [
    { include = "uq_lab", from = "lib" },
]
version = "0.1.0"
description = "Uncertainty Quantification playground and laboratory"
authors = ["Freddy Wordingham", "Mikkel Lykkegaard", "Tim Dodwell"]

[tool.poetry.dependencies]
fastapi = "^0.78.0"
python = "^3.9"
uvicorn = "^0.18.2"
fastapi-login = "^1.8.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
